# tbox

./: .bazel_downloader.cfg  .bazelrc  .clang-format  .cursorrules  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  bugs.md  format.sh
bazel/: BUILD  aws-cpp-sdk.BUILD  aws-sdk-cpp-openssl4-const.patch  aws-sdk-cpp.BUILD  aws_arm_stubs.c  aws_cpu_stubs_small.c  aws_intel_stubs.c  aws_sdk.BUILD  blake3.BUILD  boost.BUILD  brotli.BUILD  build.bzl  bzip2.BUILD  c-ares.BUILD  cjson.BUILD  common.bzl  cpplint.BUILD  cpplint.bzl  crc32c.BUILD  curl.BUILD  double-conversion.patch  fast_float.BUILD  fatal.BUILD  fb303.BUILD  fbthrift.BUILD  fbthrift.patch  fizz.BUILD  fizz.patch  fmt.BUILD  folly.BUILD  folly.patch  gcc_wrapper.sh  gen_local_config_git.py  gflags.patch  glob.bzl  glog.BUILD  googletest.patch  gperftools.BUILD  grpc-openssl4-const.patch  imagemagick.BUILD  (+47 more)
bazel/cpu/: BUILD  n105.bzl  neoverse-11.bzl  ryzen5.bzl  ryzen9.bzl
conf/: client_config.json  client_example_config.json  server_config.json  server_example_config.json  tbox.service  tbox_client.service  tbox_server.service  xiedeacc.com.cer  xiedeacc.com.fullchain.cer
deploy/: QUICK_START.md  deploy_client.sh  deploy_client_local.sh  deploy_local_client.sh  deploy_nas_client.sh  deploy_openwrt_client.sh  deploy_server.sh  deploy_server_sync_and_build.sh  deploy_web.sh  nginx.conf  shadowsocks-server.json  shadowsocks-server.service  tbox_client.openwrt.init  tbox_client.service  tbox_server.service  vlmcsd.service
src/async_grpc/: BUILD  async_client.h  client.h  completion_queue_pool.cc  completion_queue_thread.cc  event_queue_thread.cc  execution_context.h  opencensus_span.cc  retry.cc  retry.h  rpc.cc  rpc.h  rpc_handler.h  server.cc  server.h  service.cc  type_traits.h
src/async_grpc/common/: blocking_queue.h  time.cc  time.h
src/client/: BUILD  authentication_manager.cc  authentication_manager.h  authentication_manager_test.cc  client.cc  ec2_client_example.cc  grpc_client.cc  grpc_client.h  grpc_client.h.old  grpc_client_new.cc  grpc_client_new.h  grpc_client_test.cc  network_info_provider.h  report_manager.cc  report_manager.h  report_manager_test.cc  route53_client_example.cc  ssl_config_loader.h  ssl_config_manager.cc  ssl_config_manager.h  ssl_config_manager_test.cc  tbox_client.cc  websocket_client.cc  websocket_client.h  websocket_client_test.cc
src/client/grpc_client/: BUILD  grpc_client.h  grpc_server_client.h
src/client/handler/: BUILD
src/client/http_client/: BUILD
src/common/: BUILD  blocking_queue.h  blocking_queue_test.cc  defs.h  logging.cc  logging.h
src/common/proto_plugin/: BUILD  pb_code_generator.cc  pb_code_generator.h
src/common/template/: error.h
src/impl/: BUILD  cert_manager.cc  cert_manager.h  config_manager.cc  config_manager.h  config_manager_test.cc  ddns_manager.cc  ddns_manager.h  ddns_manager_test.cc  session_manager.cc  session_manager.h  sqlite_manager.cc  sqlite_manager.h  sqlite_manager_test.cc  user_manager.cc  user_manager.h  user_manager_test.cc
src/proto/: BUILD  config.proto  enums.proto  error.proto  service.proto  syncer_config.proto
src/server/: BUILD  grpc_server_impl.h  http_server_impl.h  server.cc  server_context.h  tbox_server.cc  version_info_test.cc
src/server/grpc_handler/: BUILD  EC2_HANDLER_README.md  ROUTE53_HANDLER_README.md  cert_handler.h  ec2_handler.h  ec2_handler_test.cc  meta.h  report_handler.cc  report_handler.h  route53_handler.h  route53_handler_test.cc  server_handler.h  user_handler.h
src/server/handler/: BUILD  handler.cc  handler.h
src/server/handler_proxy/: BUILD  handler_proxy.cc  handler_proxy.h
src/server/http_handler/: BUILD  cert_handler.h  default_handler.h  http_handler_factory.h  server_handler.h  user_handler.h  util.h  util_test.cc  websocket_handler.h
src/server/tcp_handler/: BUILD  vlmcsd_handler.cc  vlmcsd_handler.h
src/swig/: BUILD  config_manager.cc  config_manager.h  config_manager_test.cc
src/swig/java/com/xiedeacc/example/: BUILD
src/test/: BUILD  test_main.cc  test_util.h
src/tools/: BUILD  ddns_client.cc  ip.cc  user.cc
src/tools/syncer/: BUILD  fanotify_watcher.cc  fanotify_watcher.h  main.cc  sync_executor.cc  sync_executor.h
src/util/: BUILD  config_manager.cc  config_manager.h  config_manager_test.cc  log_cleaner.cc  log_cleaner.h  sqlite_manager.cc  sqlite_manager.h  sqlite_manager_test.cc  thread_pool.cc  thread_pool.h  thread_pool_test.cc  timer.h  util.cc  util.h  util_test.cc
src/web/: index.html  pnpm-lock.yaml  vite.config.js
src/web/src/: App.vue  style.css
src/web/src/router/: index.js
src/web/src/utils/: upload.js  upload_json.js  utils.js
src/web/src/views/: Dashboard.vue  Login.vue
test_data/util_test/: BUILD
test_data/util_test/test1/test2/: symlink_to_target_dir
web/: package.json  vite.config.js
web/src/: App.vue  config.js  main.js
web/src/router/: index.js
web/src/utils/: utils.js
web/src/views/: Dashboard.vue  Login.vue  Register.vue
